objects/amc__Billing_Event__c.object
<CustomObject>
    <description>The Billing Event Object enables users to specify the header detail of a billing event (e.g. invoice / credit)</description>
    <fields>
        <fullName>amc__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the Account the Billing Event should be linked to, if it is not the Account specified on the Project</description>
        <inlineHelpText>Identifies the Account the Billing Event should be linked to, if it is not the Account specified on the Project</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Events</relationshipLabel>
        <relationshipName>Billing_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Amount_Outstanding__c</fullName>
        <formula>amc__Total_Outstanding__c -  amc__Tax_Amount_Outstanding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Amount_Paid__c</fullName>
        <formula>amc__Total_Paid__c -  amc__Tax_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Amount__c</fullName>
        <inlineHelpText>Roll Up Summary of all related Billing Event Item records. Sum of ‘Amount’ field</inlineHelpText>
        <label>Amount</label>
        <summarizedField>amc__Billing_Event_Item__c.amc__Amount__c</summarizedField>
        <summaryForeignKey>amc__Billing_Event_Item__c.amc__Billing_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Auto_Add_Expenses__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When set to TRUE, any approved billable Expenses not yet invoiced will be added to this Billing Event. Note: Only applies where Billing Cycle is Manual</inlineHelpText>
        <label>Auto Add Expenses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Auto_Add_Time_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to TRUE, any approved billable Time Logs not yet invoiced will be added to this Billing Event. Note: Only applies where Billing Cycle is Manual</description>
        <inlineHelpText>When set to TRUE, any approved billable Time Logs not yet invoiced will be added to this Billing Event. Note: Only applies where Billing Cycle is Manual</inlineHelpText>
        <label>Auto Add Time Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the Contact the Billing Event should be linked to, if it is not the Contact specified on the Project</description>
        <inlineHelpText>Identifies the Contact the Billing Event should be linked to, if it is not the Contact specified on the Project</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.amc__Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Events</relationshipLabel>
        <relationshipName>Billing_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Content_Invoice_Id__c</fullName>
        <description>Reference to this Billing Events Invoice document.  This will be used to upload new versions.  Not for page layout.</description>
        <label>Content Invoice Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set this field to TRUE if this Billing Event is a Deposit Invoice for a Project that is using the &apos;Deposit to T&amp;M&apos; Billing Type</inlineHelpText>
        <label>Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Due_Date__c</fullName>
        <inlineHelpText>Identifies the date the Invoice / Credit is due to be settled by</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_Date__c</fullName>
        <inlineHelpText>Identifies the Invoice Date for this Billing Event</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_Number__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <inlineHelpText>Generates a sequential number</inlineHelpText>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>amc__Invoice_Template__c</fullName>
        <inlineHelpText>Identifies whether the Summary or Detail Template is used when generating the Invoice PDF</inlineHelpText>
        <label>Invoice Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Summary</fullName>
                    <default>true</default>
                    <label>Summary</label>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Billing Event is Milestone based, this will be populated with the relevant Milestone.</description>
        <inlineHelpText>If the Billing Event is Milestone based, this will be populated with the relevant Milestone.</inlineHelpText>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>amc__Milestone__c.amc__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.amc__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>amc__Milestone__c</referenceTo>
        <relationshipLabel>Billing Events</relationshipLabel>
        <relationshipName>Billing_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__PDF_URL__c</fullName>
        <inlineHelpText>Details the URL Link of the Invoice / Credit Note PDF for sharing externally</inlineHelpText>
        <label>PDF URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>amc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Project record this Billing Event relates to</inlineHelpText>
        <label>Project</label>
        <referenceTo>amc__Project__c</referenceTo>
        <relationshipLabel>Billing Events</relationshipLabel>
        <relationshipName>Billing_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Status__c</fullName>
        <inlineHelpText>Identifies the status of the Billing Event</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Summary__c</fullName>
        <inlineHelpText>Identifies the summary description for this billing event</inlineHelpText>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Amount_Outstanding__c</fullName>
        <formula>If(  amc__Tax_Amount__c  &gt; 0 ,amc__Total_Outstanding__c - (amc__Total_Outstanding__c / (1 + amc__Tax_Rate__c)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Amount_Paid__c</fullName>
        <formula>If(  amc__Tax_Amount__c  &gt; 0, amc__Total_Paid__c - (amc__Total_Paid__c / (1 + amc__Tax_Rate__c)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Amount__c</fullName>
        <inlineHelpText>Roll Up Summary of all related Billing Item records. Sum of ‘Tax Amount’ field</inlineHelpText>
        <label>Tax Amount</label>
        <summarizedField>amc__Billing_Event_Item__c.amc__Tax_Amount__c</summarizedField>
        <summaryForeignKey>amc__Billing_Event_Item__c.amc__Billing_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Label__c</fullName>
        <formula>amc__Project__r.amc__Tax_Label__r.amc__Tax_Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the Tax Label for the Tax Rate being used on the project this Billing Event relates to</inlineHelpText>
        <label>Tax Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Tax_Rate__c</fullName>
        <inlineHelpText>Identifies the Tax Rate for this currency (e.g. 10.00%). This figure populates automatically if left blank based on the Tax Rate specified on the Tax Rate record at the time of creating this Billing event</inlineHelpText>
        <label>Tax Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>amc__Total_Amount__c</fullName>
        <formula>amc__Amount__c +  amc__Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the Total Amount of this Billing Event (Amount + Tax Amount)</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Total_Outstanding__c</fullName>
        <formula>amc__Total_Amount__c -  amc__Total_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the Total Outstanding of this Billing Event (Total Amount – Total Paid)</inlineHelpText>
        <label>Total Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>amc__Total_Paid__c</fullName>
        <inlineHelpText>Roll Up Summary of all related Billing Payment records. Sum of ‘Amount’</inlineHelpText>
        <label>Total Paid</label>
        <summarizedField>amc__Billing_Payment__c.amc__Amount__c</summarizedField>
        <summaryForeignKey>amc__Billing_Payment__c.amc__Billing_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>amc__Type__c</fullName>
        <inlineHelpText>Identifies the type of Billing Event</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Update_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the attached invoice is out of date and needs updating. Click the View Invoice button to manually update. Invoices get automatically updated within 5 minutes.</description>
        <inlineHelpText>Indicates the attached invoice is out of date and needs updating. Click the View Invoice button to manually update. Invoices get automatically updated within 5 minutes.</inlineHelpText>
        <label>Update PDF</label>
        <type>Checkbox</type>
    </fields>
    <label>Billing Event</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Type__c</columns>
        <columns>amc__Invoice_Date__c</columns>
        <columns>amc__Invoice_Number__c</columns>
        <columns>amc__Project__c</columns>
        <columns>amc__Amount__c</columns>
        <columns>amc__Milestone__c</columns>
        <columns>amc__Due_Date__c</columns>
        <columns>amc__Tax_Label__c</columns>
        <columns>amc__Total_Amount__c</columns>
        <columns>amc__Tax_Amount__c</columns>
        <columns>amc__Total_Paid__c</columns>
        <columns>amc__Total_Outstanding__c</columns>
        <columns>amc__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amc__Ensure_Billing_Cycle_is_Manual</fullName>
        <active>true</active>
        <description>Ensure the Billing Cycle on the Project is set to Manual if the User is trying to use the &apos;Auto Add&apos; fields</description>
        <errorConditionFormula>AND(OR( amc__Auto_Add_Expenses__c , amc__Auto_Add_Time_Logs__c ), NOT(ISPICKVAL( amc__Project__r.amc__Billing_Cycle__c , &quot;Manual&quot;)))</errorConditionFormula>
        <errorMessage>You can only use the Auto Add field(s) if the Project Billing Cycle = Manual</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Project_Not_Deposit_to_TM</fullName>
        <active>true</active>
        <description>Ensure the Deposit field can only be set to TRUE for Projects where the Billing Type is set to &apos;Deposit to T&amp;M&apos;</description>
        <errorConditionFormula>AND(amc__Deposit__c = TRUE, NOT(ISPICKVAL(amc__Project__r.amc__Billing_Type__c, &quot;Deposit to T&amp;M&quot;)))</errorConditionFormula>
        <errorMessage>Deposit can only be set to TRUE if the Project Billing Type is set to &apos;Deposit to T&amp;M&apos;</errorMessage>
    </validationRules>
</CustomObject>